<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/channel_loader_background"
    tools:context="com.selecttvapp.ui.activities.LoadingActivity">
    <LinearLayout
        android:id="@+id/ll_no_internet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:visibility="invisible"
        android:gravity="center"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_internet_connection"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:gravity="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/please_check_your_internet_connection_or_try_again"
            android:textSize="17sp"
            android:textColor="@color/white"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/textViewTapToReload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tap_to_retry"
            android:textSize="16sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginTop="@dimen/ui_channel_line_height_20"
            android:textColor="@color/white"
            android:clickable="true"
            android:onClick="onTapToRetry"
            android:gravity="center"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_ll_loading_Image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        android:gravity="center">
        <ImageView
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:scaleType="centerInside"
            android:src="@drawable/splash_logo" />
    </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:visibility="invisible"
            android:paddingTop="@dimen/padding_eextra_large_50"
            android:layout_marginLeft="@dimen/padding_eextra_large_50"
            android:layout_marginRight="@dimen/padding_eextra_large_50"
            android:orientation="vertical"
            android:paddingBottom="30dp">

            <TextView
                android:id="@+id/txt_splash_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Loading..."
                android:textColor="#ffffff"
                android:textSize="14sp" />

            <com.akexorcist.roundcornerprogressbar.RoundCornerProgressBar
                android:id="@+id/splash_progress"
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/txt_splash_progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="0%"
                android:textColor="#ffffff"
                android:textSize="14sp" />
        </LinearLayout>


</FrameLayout>
